package dataControllerUtils.protobuf;
import "dataControllerUtils/DataFilter.proto";

//The parameter full identity 

message DataId {
extensions 15 to 107;

  required string parameterName = 2;
  optional string oid = 3; // oid can't and isn't filled by GPCCHS. 
  required string catalog = 4;
  optional string comObject = 5;
  required uint32 sessionId = 6; //todo should be uint16 
  optional uint32 domainId = 7;  //todo should be uint16 
  optional string url = 8; //for fds parameters
  optional string version = 9; //for fds parameters
  repeated DataFilter filters = 10;
}
